# ImageProcessing

./: .gitignore  CMakeLists.txt  README.md  build.vs.2019.cmake  build.vs.2022.cmake  rebuild.ps1
data/: masks.json
prj.labs/: CMakeLists.txt
prj.labs/control-work/: CMakeLists.txt  control-work.cpp  control-work.report.md.in.txt
prj.labs/lab01/: lab01.cpp  lab01.report.md.in.txt
prj.labs/lab02/: lab02.cpp  lab02.report.md.in.txt
prj.labs/lab03/: lab03.cpp  lab03.report.md.in.txt
prj.labs/lab04/: CMakeLists.txt  lab04.cpp  lab04.report.md.in.txt
